# pylolesports

./: .gitignore  Pipfile  README.md  pyproject.toml
pylolesports/: __init__.py  pylolesports.py
pylolesports/api/: config.py  endpoints.py  endpoints_raw.py
pylolesports/api/data_models/: __init__.py
pylolesports/api/data_models/events/: __init__.py  event_live.py  event_schedule.py
pylolesports/api/data_models/leagues/: __init__.py  league.py  league_standings.py  league_tournament.py
pylolesports/api/data_models/match_details/: __init__.py  details.py  window.py
pylolesports/api/data_models/teams/: __init__.py  team.py
